13118 Very slow reaping, possible deadlock in zfs_delmap Portions contributed by: Bryan Cantrill <bryan@joyent.com> Reviewed by: Joshua M. Clulow <josh@sysmgr.org> Approved by: Dan McDonald <danmcd@joyent.com>